# language-packs

./: .gitignore  LICENSE.txt  README.md  RELEASE.md  crowdin.yml  repository-map.yml  requirements.txt
language-packs/jupyterlab-language-pack-ach-UG/: .copier-answers.yml  README.md  pyproject.toml
language-packs/jupyterlab-language-pack-ach-UG/jupyterlab_language_pack_ach_UG/: __init__.py
language-packs/jupyterlab-language-pack-ca-ES/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-ca-ES/jupyterlab_language_pack_ca_ES/: jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-cs-CZ/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-cs-CZ/jupyterlab_language_pack_cs_CZ/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-da-DK/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-da-DK/jupyterlab_language_pack_da_DK/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-de-DE/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-de-DE/jupyterlab_language_pack_de_DE/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-es-ES/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-es-ES/jupyterlab_language_pack_es_ES/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-et-EE/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-et-EE/jupyterlab_language_pack_et_EE/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-he-IL/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
language-packs/jupyterlab-language-pack-he-IL/jupyterlab_language_pack_he_IL/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-hu-HU/: .bumpversion.cfg  .copier-answers.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-hu-HU/jupyterlab_language_pack_hu_HU/: __init__.py  jupyterlab.mo
language-packs/jupyterlab-language-pack-hy-AM/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-hy-AM/jupyterlab_language_pack_hy_AM/: __init__.py
language-packs/jupyterlab-language-pack-id-ID/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-id-ID/jupyterlab_language_pack_id_ID/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-it-IT/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-it-IT/jupyterlab_language_pack_it_IT/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-ja-JP/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-ja-JP/jupyterlab_language_pack_ja_JP/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-ko-KR/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-ko-KR/jupyterlab_language_pack_ko_KR/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-no-NO/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-no-NO/jupyterlab_language_pack_no_NO/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-pl-PL/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-pl-PL/jupyterlab_language_pack_pl_PL/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-pt-BR/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-pt-BR/jupyterlab_language_pack_pt_BR/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-ro-RO/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-ro-RO/jupyterlab_language_pack_ro_RO/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-ru-RU/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-ru-RU/jupyterlab_language_pack_ru_RU/: __init__.py  jupyterlab.json  jupyterlab.mo
language-packs/jupyterlab-language-pack-tr-TR/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-vi-VN/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
language-packs/jupyterlab-language-pack-zh-CN/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
language-packs/jupyterlab-language-pack-zh-TW/: .bumpversion.cfg  .copier-answers.yml  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
(+1917 files in other folders)
