[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-pseudo-language-pack"
description = "JupyterLab pseudo-language Pack"
authors = [
    { name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jupyterlab", "language", "language pack"]
dynamic = ["version"]

[project.entry-points."jupyterlab.languagepack"]
ach_UG = "jupyterlab_language_pack_ach_UG"

[project.urls]
homepage = "https://github.com/jupyterlab/language-packs"

[tool.hatch.build]
artifacts = [
    "CONTRIBUTORS.md"
]

[tool.hatch.build.hooks.jupyter-translate]
dependencies = ["jupyterlab-translate>=1.3.7"]

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_language_pack_ach_UG"]
artifacts = [
    "jupyterlab_language_pack_ach_UG/**/*.json",
    "jupyterlab_language_pack_ach_UG/**/*.mo",
]
exclude = [
    "jupyterlab_language_pack_ach_UG/**/*.po",
]

[tool.hatch.version]
path = "jupyterlab_language_pack_ach_UG/__init__.py"
