[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-language-pack-ca-ES"
description = "JupyterLab Catalan (Spain) Language Pack"
authors = [
    { name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jupyterlab", "language", "language pack", "localization"]
dynamic = ["version"]

[project.entry-points."jupyterlab.languagepack"]
ca_ES = "jupyterlab_language_pack_ca_ES"

[projects.urls]
homepage = "https://github.com/jupyterlab/language-packs"

[tool.hatch.build]
artifacts = [
    "CONTRIBUTORS.md"
]

[tool.hatch.build.hooks.jupyter-translate]
dependencies = ["jupyterlab-translate>=1.2.0"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "jupyterlab_language_pack_ca_ES/**/*.json",
    "jupyterlab_language_pack_ca_ES/**/*.mo",
]
exclude = [
    "jupyterlab_language_pack_ca_ES/**/*.po",
]

[tool.hatch.version]
path = "jupyterlab_language_pack_ca_ES/__init__.py"
