
[metadata]
name = jupyterlab-language-pack-ca-ES
version = attr: jupyterlab_language_pack_ca_ES.__version__
description = JupyterLab Catalan (Spain) Language Pack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlab/language-packs
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
author = Project Jupyter Contributors
author_email = jupyter@googlegroups.com
license = BSD-3-Clause
keywords = jupyterlab, language, language pack, localization
platforms = Linux, Mac OS X, Windows

[options]
packages = find:
include_package_data = True

[options.entry_points]
jupyterlab.languagepack =
    ca_ES = jupyterlab_language_pack_ca_ES

[bdist_wheel]
universal=1
