[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-language-pack-hy-AM"
description = "JupyterLab Armenian (Armenia) Language Pack"
authors = [
    { name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["jupyterlab", "language", "language pack", "localization"]
dynamic = ["version"]

[project.entry-points."jupyterlab.languagepack"]
hy_AM = "jupyterlab_language_pack_hy_AM"

[projects.urls]
homepage = "https://github.com/jupyterlab/language-packs"

[tool.hatch.build]
artifacts = [
    "CONTRIBUTORS.md"
]

[tool.hatch.build.hooks.jupyter-translate]
dependencies = ["jupyterlab-translate>=1.2.0"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "jupyterlab_language_pack_hy_AM/**/*.json",
    "jupyterlab_language_pack_hy_AM/**/*.mo",
]
exclude = [
    "jupyterlab_language_pack_hy_AM/**/*.po",
]

[tool.hatch.version]
path = "jupyterlab_language_pack_hy_AM/__init__.py"
