
[metadata]
name = jupyterlab-language-pack-ru-RU
version = attr: jupyterlab_language_pack_ru_RU.__version__
description = JupyterLab Russian (Russia) Language Pack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlab/language-packs
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
author = Project Jupyter Contributors
author_email = jupyter@googlegroups.com
license = BSD-3-Clause
keywords = jupyterlab, language, language pack, localization
platforms = Linux, Mac OS X, Windows

[options]
packages = find:
include_package_data = True

[options.entry_points]
jupyterlab.languagepack =
    ru_RU = jupyterlab_language_pack_ru_RU

[bdist_wheel]
universal=1
